force-app/main/default/objects/Sampling_Target__c/Sampling_Target__c.object-meta.xml
<CustomObject>
    <label>Sampling Target</label>
    <nameField>
        <label>Sampling Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sampling Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>