force-app/main/default/objects/Sampling_Target__c/fields/Actual_Sample_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sample_Qty__c</fullName>
    <label>Actual Sample Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>