force-app/main/default/objects/Sampling_Target__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>渠道名称（和Customer_Management__c表中的客户管理名称Management_Name__c一致）</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>