force-app/main/default/objects/Sampling_Target__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <description>渠道编码（根据渠道名称匹配Customer_Management__c表的Management_Name__c字段获取Customer_Management_Name_Code__c字段）</description>
    <label>Channel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>