force-app/main/default/objects/Sampling_Target__c/fields/Customer_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model__c</fullName>
    <description>客户型号</description>
    <label>Customer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>