force-app/main/default/objects/Sampling_Target__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>导入日期</description>
    <inlineHelpText>Import date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>