force-app/main/default/objects/Sampling_Target__c/fields/Platform_Model__c.field-meta.xml
<CustomField>
    <fullName>Platform_Model__c</fullName>
    <description>平台型号（总部上传）</description>
    <label>Platform Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>