force-app/main/default/objects/Sampling_Target__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>产品线（校验和系统中已有的产品线名称一致）</description>
    <inlineHelpText>product line (matches the name of the product line already in the system)</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>