force-app/main/default/objects/Sampling_Target__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>大区（匹配信数区组维表rgn_zh）</description>
    <inlineHelpText>region (matching field rgn_zh from HiData)</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>