force-app/main/default/objects/Sampling_Target__c/fields/Sample_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Status__c</fullName>
    <description>出样状态（取最新月份上传的出样实际表中的出样状态值），包括已完成、出样中、撤样中、完成撤样、仅线上销售五种状态</description>
    <inlineHelpText>Sampling status (take the sampling status value in the sampling actual table uploaded in the latest month), including five statuses: Finished, Displaying, Withdrawning, Withdrawn and Only Online.</inlineHelpText>
    <label>Sample Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>已完成</fullName>
            </value>
            <value>
                <fullName>出样中</fullName>
            </value>
            <value>
                <fullName>撤样中</fullName>
            </value>
            <value>
                <fullName>完成撤样</fullName>
            </value>
            <value>
                <fullName>仅线上销售</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>