force-app/main/default/objects/Sampling_Target__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>海外公司名称（如大区为欧洲大区，则匹配信数区组维表中的sub_zh，否则匹配grp_zh）</description>
    <inlineHelpText>Overseas company name (matches sub_zh from HiData if the region is Europe, otherwise matches grp_zh)</inlineHelpText>
    <label>SBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>