force-app/main/default/objects/Sampling_Target__c/fields/Targeted_Sample_Numbers_Feb__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Sample_Numbers_Feb__c</fullName>
    <description>目标出样数量（2月）</description>
    <label>Targeted Sample Numbers(Feb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>