force-app/main/default/objects/Sampling_Target__c/fields/Targeted_Sample_Numbers_Nov__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Sample_Numbers_Nov__c</fullName>
    <description>目标出样数量（11月）</description>
    <label>Targeted Sample Numbers(Nov)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>