force-app/main/default/objects/Sampling_Target__c/fields/Total_Sample_Qty_in_2023__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Qty_in_2023__c</fullName>
    <description>2023累计出样数量（总部/市场上传）</description>
    <label>Total Sample Qty in 2023</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>