force-app/main/default/objects/Sampling_Target__c/fields/Total_Sample_Targeted_Qty_in_2024__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Targeted_Qty_in_2024__c</fullName>
    <description>2024累计出样目标（无需上传，系统自动取12月目标出样数量）</description>
    <label>Total Sample Targeted Qty in 2024</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>