force-app/main/default/objects/Sampling_Target__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <description>价格段（匹配信数）</description>
    <inlineHelpText>Price range (matching HiData)</inlineHelpText>
    <label>USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>