force-app/main/default/objects/Sampling_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>SBU__c</columns>
    <columns>Channel__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Total_Sample_Targeted_Qty_in_2024__c</columns>
    <columns>Sample_Status__c</columns>
    <columns>Sampling_Target_Year__c</columns>
    <columns>Platform_Model__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>